--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</div>
     <div class="well">
         <p><span class="text-primary"><b>添加我到软件源</span></b> 这是一个sileo的动态库.</p>
-        <a class="btn btn-sm btn-default" href='sileo://source/https://https://hyczby520.github.io/hyc/'><FONT COLOR="#ff0000">点击这里直接把源添加到sileo</FONT></a>
+        <a class="btn btn-sm btn-default" href='sileo://source/https://hyczby520.github.io/hyc/'><FONT COLOR="#ff0000">点击这里直接把源添加到sileo</FONT></a>
     </div>
 </div>
 </div>
