--- a/ms/description.html
+++ b/ms/description.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>他是个疯子</title>
+<title>一彩黄</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel='stylesheet' type='text/css' href='ios7.css'/>
@@ -17,7 +17,7 @@
  <body onload="loadPackageInfo();loadRecentUpdates();">
 <div class="container" id="dependenciesContainer">
 <div id="showAddRepo_" hidden>
-    <h2>他是个疯子的个人源</h2>
+    <h2>小一白的个人源</h2>
     <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://sileo-cydia.github.io/">
         <img class="icon" src="cydia7.png"/>
         <label><h3>打开cydia查看</h3></label></a>
